--- a/Projects.html
+++ b/Projects.html
@@ -24,6 +24,6 @@
     </p>
     <footer style=" text-align:center; font-size: x-large; padding-left: 10%; padding-right: 10%;">((Work in Progress))</footer>
     <br>
-    <footer style="text-align: center; font-size: x-large;"><a onmouseout="this.style.color = 'purple';" onmouseover="this.style.color = 'orange';" href="Portfolio Website.html">Main Site</a></footer>
+    <footer style="text-align: center; font-size: x-large;"><a onmouseout="this.style.color = 'purple';" onmouseover="this.style.color = 'orange';" href="index.html">Main Site</a></footer>
     <footer style="text-align: center; font-size: x-large;"><a onmouseout="this.style.color = 'purple';" onmouseover="this.style.color = 'orange';" href="file:///D:/Inportant/CV_Tallen-Thompson.pdf">CV</footer>
 </html> 
