--- a/Projects.html
+++ b/Projects.html
@@ -25,5 +25,5 @@
     <footer style=" text-align:center; font-size: x-large; padding-left: 10%; padding-right: 10%;">((Work in Progress))</footer>
     <br>
     <footer style="text-align: center; font-size: x-large;"><a onmouseout="this.style.color = 'purple';" onmouseover="this.style.color = 'orange';" href="https://tallen123.github.io/">Main Site</a></footer>
-    <footer style="text-align: center; font-size: x-large;"><a onmouseout="this.style.color = 'purple';" onmouseover="this.style.color = 'orange';" href="file:///D:/Inportant/CV_Tallen-Thompson.pdf">CV</footer>
+    <footer style="text-align: center; font-size: x-large;"><a onmouseout="this.style.color = 'purple';" onmouseover="this.style.color = 'orange';" href="https://github.com/Tallen123/Tallen123.github.io/blob/main/CV_Tallen-Thompson.pdf">CV</footer>
 </html> 
