--- a/index.html
+++ b/index.html
@@ -48,5 +48,5 @@
     </tbody>
     </table>
     <footer style="text-align: center; font-size: x-large;"><a onmouseout="this.style.color = 'purple';" onmouseover="this.style.color = 'orange';" href="Projects.html">Previous Projects</a></footer>
-    <footer style="text-align: center; font-size: x-large;"><a onmouseout="this.style.color = 'purple';" onmouseover="this.style.color = 'orange';" href="file:///D:/Inportant/CV_Tallen-Thompson.pdf">CV</footer>
+    <footer style="text-align: center; font-size: x-large;"><a onmouseout="this.style.color = 'purple';" onmouseover="this.style.color = 'orange';" href="https://github.com/Tallen123/Tallen123.github.io/blob/main/CV_Tallen-Thompson.pdf">CV</footer>
 </html>
