--- a/Projects.html
+++ b/Projects.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <link rel="stylesheet" href="styles2.css">
-    <h1>Previous Projects</h1>
+    <h1 style = "text-align:center; font-size: xx-large;">Previous Projects</h1>
     <h2 style="text-align:center; font-size: xx-large;">C# based projects:</h2>
     <h3 style="text-align:center; font-size: xx-large;">japanese Learning program (no formal name as of now)</h3>
     <p style=" text-align:center; font-size: x-large; padding-left: 10%; padding-right: 10%;">
