--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         interesting but confusing at the same time due to this i look forward to leaning it. Personally i really enjoy leaning more about tech and 
         programming just being able to understand how things work and carry out specific tasks is something i love.
     </p>
+    <h1 style="border: 0ch;">Education</h1>
     <table width:100%; border-spacing:1px; margin-right:15px; margin-left:15px; style="padding-right: 50%;" >
         <tbody>
         <tr>
