--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-     <link rel="stylesheet" href="styles.css">
+     <link type="text/css" rel="stylesheet" href="styles.css">
     <title>
         Tallen Thompson
     </title>
