--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="style.css">
 <title>Tallen Thompson</title>
 <header>
+    <! --- and --->
     <h1 style="top: -1%;left: 1%;" class="Fh">Hi im,</h1>
     <h1 style="top: 83%;left: 1%; color: rebeccapurple;" class="FName">Tallen </h1>
     <h1 style="top: 166%;left: 1%;" class="SName">Thompson</h1>
