--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
                 to use</p>
 
             <br>
-            <h3>Css</h3>
+            <h3>CSS</h3>
 
-            <p>I find Css interesting due to its ability to change how a website looks sometimes its very minimal but others its drastic for example something as simple as changing site background or something as complex as site wide Css that changes absolutely
-                everything
+            <p>I find CSS interesting due to its ability to change how a website looks. It can can change how every aspect of a website looks and i find that really interesting.
             </p>
 
             <br>
