--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <link rel="stylesheet" href="style.css">
 <title>Tallen Thompson</title>
 <header>
-    <! --- and --->
     <h1 style="top: -1%;left: 1%;" class="Fh">Hi im,</h1>
     <h1 style="top: 83%;left: 1%; color: rebeccapurple;" class="FName">Tallen </h1>
     <h1 style="top: 166%;left: 1%;" class="SName">Thompson</h1>
@@ -22,7 +21,7 @@
     </div>
 </header>
 
-<body>
+<body id="body">
     <section class="Sudo_body" style="color:   black;">
         <div id="HomePage">
             <h2>Home</h2>
@@ -265,6 +264,13 @@
             }
         </script>
     </section>
+    <script>
+        const isMobile = ('ontouchstart' in document.documentElement && navigator.userAgent.match(/Mobi/));
+        var body = document.getElementById("body")
+        if (isMobile) {
+            body.style.backgroundColor = "teal"
+        }
+    </script>
 </body>
 
 </html>
