fixed spelling mistakes and gammar issues

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 <title>Tallen Thompson</title>
 <header>
-    <h1 style="top: -1%;left: 1%;" class="Fh">Hi im,</h1>
+    <h1 style="top: -1%;left: 1%;" class="Fh">Hi im</h1>
     <h1 style="top: 83%;left: 1%; color: rebeccapurple;" class="FName">Tallen </h1>
     <h1 style="top: 166%;left: 1%;" class="SName">Thompson</h1>
     <h1 style="top: 249%;left: 1%; color: rebeccapurple;" class="Sh">Web developer</h1>
@@ -97,12 +97,12 @@
             </p>
             <br><br>
             <p>
-                throughout my life I have always been self taught in a number of applications and systems such as Website development and software development and i have also had the opportunity to use this experiance whithin a practical work setting whilst employed
-                where i have used my skills in web development aswell as learn python development with Gaius networks.
+                throughout my life I have always been self taught in a number of applications and systems such as Website development and software development and i have also had the opportunity to use this experience within a practical work setting whilst employed where
+                i have used my skills in web development as-well as learn python development with Gaius networks.
             </p>
             <br><br>
             <p>
-                An area of particular enjoyment for me is website development as I am very interested in the amount of programing needed and this is a area i would be keen to be wokring on
+                An area of particular enjoyment for me is website development as I am very interested in the amount of programing needed and this is a area i would be keen to continue working in.
             </p>
         </div>
 
@@ -115,8 +115,9 @@
             <br>
             <h3>Time and Weather</h3>
             <br>
-            <p>This is a basic Python program but its also my first. Time and Weather uses 2 APIs to get the time and then the Weather after this it processes that information as the weather was in kelvin originally before getting converted to celsius but
-                the biggest challenge was drawing that information to the screen and updating it every second. But during the development process i had a lot of fun as well as i learnt a lot about this language that ive never used before. </p>
+            <p>This is a basic Python program but its also my first Time and Weather uses 2 APIs to get the time and then the Weather after this. It processes that information as the weather was in kelvin originally before getting converted to celsius. During
+                the development process the biggest challenge was drawing that information to the screen and updating it every second. But during the development process i had a lot of fun as well as i learnt a lot about this language that ive never used
+                before. </p>
             <br>
             <h3>HUB</h3>
             <br>
@@ -138,7 +139,7 @@
                 }
             </script>
             <br>
-            <p>Nihongo.net is a project of mine and a few friends where we aim to teach people Japanese aswell as Japanese Culture. This project Uses HTML, CSS, JS as-well as pyton(Flask)(passion project). <br> This is also the biggest project ive worked
+            <p>Nihongo.net is a project of mine and a few friends where we aim to teach people Japanese as-well as Japanese Culture. This project Uses HTML, CSS, JS as-well as pyton(Flask)(passion project). <br> This is also the biggest project ive worked
                 on.
             </p>
         </div>
@@ -148,8 +149,8 @@
             <br><br>
             <h3>languages</h3>
             <br>
-            <p>I really enjoy learning new things and languages are no exemption as i can speak Japanese to a moderate level and a few others at an basic level as i seam to just pick up random words from random languages sometimes but due to this my vocabulary
-                in Japanese is really vast not due to learning or studying but just by accident. </p>
+            <p>I really enjoy learning new things and languages are no exception as i can speak Japanese to a moderate level. A few other languages at a very basic level as i seem to just pick up random words from random languages sometimes. Due to this
+                my vocabulary in Japanese is really vast not due to learning or studying but just by accident. </p>
             <br>
             <h3>Programming</h3>
             <br>
