--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <h2>Home</h2>
             <br>
             <p>
-                i'm Currently working as a IT instructor trainee at <a id="Work_site" style="color: black;" href="https://flipped.ai">Gaius networks</a> Whilst in this role I have learned everything needed to be a full stack developer. With this knowledge
-                I create resources that are then used to create course content, which is then put on Flipped.ai for employers to find a candidate.
+                i'm Currently Unemployed, My last job was at <a id="Work_site" style="color: black;" href="https://flipped.ai">Gaius networks</a> as an IT instructor, Whilst in this role I have learned everything needed to be a full stack developer. With
+                this knowledge I create resources that are then used to create course content, which is then put on Flipped.ai for employers to find a candidate.
             </p>
             <br>
             <button style="color: white; background-color: black;" id="CV">View My CV</button>
@@ -72,27 +72,31 @@
                 to use</p>
 
             <br>
-            <h3>CSS</h3>
-
-            <p>I find CSS interesting due to its ability to change how a website looks. It can can change how every aspect of a website looks and i find that really interesting.
-            </p>
 
             <br>
-            <h3>HTML5</h3>
+            <h3>React.js</h3>
 
-            <p>I have made 20+ websites so far. There are some that have greater simplicity(like this one) but i have also undertaken many others with far greater complexity. I am always amazed by how much can be done with HTML when used with JS and CSS
-                as this is something i find real enjoyment in </p>
+            <p>I am Currently learning react.js during this i have learnt many things about it and enjoy using it alone side tailwind css/p>
 
-            <br>
+                <br>
+                <h3>CSS</h3>
+
+                <p>I find CSS interesting due to its ability to change how a website looks. It can can change how every aspect of a website looks and i find that really interesting.
+                </p>
+
+                <br>
+                <h3>HTML5</h3>
+
+                <p>I have made 20+ websites so far. There are some that have greater simplicity(like this one) but i have also undertaken many others with far greater complexity. I am always amazed by how much can be done with HTML when used with JS and
+                    CSS as this is something i find real enjoyment in </p>
+
+                <br>
         </div>
 
         <div id="About_me_page" hidden>
             <h2>About Me</h2>
             <br>
             <p>
-                <script>
-                    // More to be added soon
-                </script>
                 I am a friendly, trustworthy and well-presented individual who is looking to continue building my work experience within the programming industry.
             </p>
             <br><br>
@@ -126,22 +130,6 @@
             <h3>Linked</h3>
             <br>
             <p>This was a application that allowed the user to connect to 4 social media platforms at the same time but as my development focus has changed to web development i am considering how i can make this a possibility on the web.</p>
-            <br>
-            <br>
-            <h3><a id="Nihongo" style="color: black;" href="https://tallen.pythonanywhere.com/">Nihongo.net</a></h3>
-            <script>
-                var Nihongo = document.getElementById("Nihongo");
-                Nihongo.onmouseenter = function() {
-                    this.style.color = "rebeccapurple";
-                }
-                Nihongo.onmouseleave = function() {
-                    this.style.color = "black";
-                }
-            </script>
-            <br>
-            <p>Nihongo.net is a project of mine and a few friends where we aim to teach people Japanese as-well as Japanese Culture. This project Uses HTML, CSS, JS as-well as pyton(Flask)(passion project). <br> This is also the biggest project ive worked
-                on.
-            </p>
         </div>
 
         <div id="HobbiesPage" hidden>
