--- a/index.html
+++ b/index.html
@@ -76,21 +76,27 @@
             <br>
             <h3>React.js</h3>
 
-            <p>I am Currently learning react.js during this i have learnt many things about it and enjoy using it alone side tailwind css/p>
+            <p>I am Currently learning react.js during this i have learnt many things about it and enjoy using it alone side tailwind css
 
                 <br>
-                <h3>CSS</h3>
-
-                <p>I find CSS interesting due to its ability to change how a website looks. It can can change how every aspect of a website looks and i find that really interesting.
-                </p>
-
                 <br>
-                <h3>HTML5</h3>
+                <h3>Tailwind CSS</h3>
 
-                <p>I have made 20+ websites so far. There are some that have greater simplicity(like this one) but i have also undertaken many others with far greater complexity. I am always amazed by how much can be done with HTML when used with JS and
-                    CSS as this is something i find real enjoyment in </p>
+                <p>I am Currently learning how to use Tailwind CSS along side react.js during this i learnt a lot and may use Tailwind in future projects as its ease of use is really appealing.
 
-                <br>
+                    <br>
+                    <h3>CSS</h3>
+
+                    <p>I find CSS interesting due to its ability to change how a website looks. It can can change how every aspect of a website looks and i find that really interesting.
+                    </p>
+
+                    <br>
+                    <h3>HTML5</h3>
+
+                    <p>I have made 20+ websites so far. There are some that have greater simplicity(like this one) but i have also undertaken many others with far greater complexity. I am always amazed by how much can be done with HTML when used with JS
+                        and CSS as this is something i find real enjoyment in </p>
+
+                    <br>
         </div>
 
         <div id="About_me_page" hidden>
