--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <br>
             <p>
                 i'm Currently Unemployed, My last job was at
-                <a class="Work_site" href="https://www.crafthivecreative.com">CraftHive Creative</a>
+                <a class="Work_site" style=".Work_site:hover{color: rebeccapurple;}Work_site{color: black;}" href="https://www.crafthivecreative.com">CraftHive Creative</a>
                 as a Technical Director which entailed me creating custom software solutions,
                 during this i was also working for
-                <a class="Work_site" href="https://www.blpvfx.com">Big Lazy Panda</a>
+                <a class="Work_site" style=".Work_site:hover{color: rebeccapurple;}Work_site{color: black;}" href="https://www.blpvfx.com">Big Lazy Panda</a>
                 as a Technical Director also. During these roles i worked on both compaines CGI Pipeline as well as
                 asisted on the production of a apple TV show,
                 this opportunity gave me a understanding of the CGI workflow.
